fixing twoboxes wrapping issues

--- a/assets/style.css
+++ b/assets/style.css
@@ -318,7 +318,8 @@ button a {
 
 .twoboxes {
     display: flex;
-    justify-content: space-around;
+    flex-wrap: wrap;
+    justify-content: space-between;
     align-items: start;
     min-height: 40vh;
     height: auto;    
